src/main.output
Terminals unused in grammar

   BOOL


State 94 conflicts: 10 shift/reduce
State 95 conflicts: 10 shift/reduce
State 103 conflicts: 10 shift/reduce
State 113 conflicts: 10 shift/reduce
State 114 conflicts: 10 shift/reduce
State 116 conflicts: 10 shift/reduce
State 120 conflicts: 10 shift/reduce
State 124 conflicts: 10 shift/reduce
State 125 conflicts: 10 shift/reduce
State 126 conflicts: 10 shift/reduce
State 128 conflicts: 10 shift/reduce
State 129 conflicts: 10 shift/reduce
State 131 conflicts: 10 shift/reduce
State 132 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement
    4           | LBRACE statements RBRACE

    5 statement: SEMICOLON
    6          | declaration SEMICOLON
    7          | assign SEMICOLON
    8          | if
    9          | while
   10          | for
   11          | return SEMICOLON

   12 declaration: T IDENTIFIER LOP_ASSIGN expr
   13            | T idlist

   14 idlist: IDENTIFIER COMMA idlist
   15       | IDENTIFIER

   16 assign: IDENTIFIER LOP_ASSIGN expr

   17 if: S_IF LPAREN expr RPAREN statements

   18 while: S_WHILE LPAREN expr RPAREN statements

   19 for: S_FOR LPAREN expr SEMICOLON expr SEMICOLON expr RPAREN statements
   20    | S_FOR LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN statements
   21    | S_FOR LPAREN SEMICOLON expr SEMICOLON expr RPAREN statements
   22    | S_FOR LPAREN expr SEMICOLON SEMICOLON expr RPAREN statements
   23    | S_FOR LPAREN declaration SEMICOLON SEMICOLON expr RPAREN statements
   24    | S_FOR LPAREN expr SEMICOLON expr SEMICOLON RPAREN statements
   25    | S_FOR LPAREN declaration SEMICOLON expr SEMICOLON RPAREN statements
   26    | S_FOR LPAREN SEMICOLON SEMICOLON expr RPAREN statements
   27    | S_FOR LPAREN SEMICOLON expr SEMICOLON RPAREN statements
   28    | S_FOR LPAREN expr SEMICOLON SEMICOLON RPAREN statements
   29    | S_FOR LPAREN declaration SEMICOLON SEMICOLON RPAREN statements
   30    | S_FOR LPAREN SEMICOLON SEMICOLON RPAREN statements

   31 return: S_RETURN
   32       | S_RETURN expr

   33 expr: IDENTIFIER
   34     | TRUE
   35     | FALSE
   36     | expr EQUAL expr
   37     | expr NEQ expr
   38     | expr GT expr
   39     | expr LT expr
   40     | expr GEQ expr
   41     | expr LEQ expr
   42     | NOT expr
   43     | expr AND expr
   44     | expr OR expr
   45     | INTEGER
   46     | CHAR
   47     | STRING
   48     | expr ADD expr
   49     | expr SUB expr
   50     | expr MUL expr
   51     | expr DIV expr
   52     | LPAREN expr RPAREN
   53     | expr MOD expr
   54     | SUB expr
   55     | ADD expr

   56 T: T_INT
   57  | T_CHAR
   58  | T_BOOL
   59  | T_STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
T_CHAR (258) 57
T_INT (259) 56
T_STRING (260) 59
T_BOOL (261) 58
LOP_ASSIGN (262) 12 16
S_IF (263) 17
S_WHILE (264) 18
S_RETURN (265) 31 32
S_FOR (266) 19 20 21 22 23 24 25 26 27 28 29 30
LPAREN (267) 17 18 19 20 21 22 23 24 25 26 27 28 29 30 52
RPAREN (268) 17 18 19 20 21 22 23 24 25 26 27 28 29 30 52
LBRACE (269) 4
RBRACE (270) 4
SEMICOLON (271) 5 6 7 11 19 20 21 22 23 24 25 26 27 28 29 30
COMMA (272) 14
OR (273) 44
AND (274) 43
EQUAL (275) 36
NEQ (276) 37
GT (277) 38
LT (278) 39
GEQ (279) 40
LEQ (280) 41
ADD (281) 48 55
SUB (282) 49 54
MUL (283) 50
DIV (284) 51
MOD (285) 53
NOT (286) 42
TRUE (287) 34
FALSE (288) 35
IDENTIFIER (289) 12 14 15 16 33
INTEGER (290) 45
CHAR (291) 46
BOOL (292)
STRING (293) 47
UMINUS (294)
UPLUS (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
statements (43)
    on left: 2 3 4, on right: 1 3 4 17 18 19 20 21 22 23 24 25 26 27
    28 29 30
statement (44)
    on left: 5 6 7 8 9 10 11, on right: 2 3
declaration (45)
    on left: 12 13, on right: 6 20 23 25 29
idlist (46)
    on left: 14 15, on right: 13 14
assign (47)
    on left: 16, on right: 7
if (48)
    on left: 17, on right: 8
while (49)
    on left: 18, on right: 9
for (50)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30, on right: 10
return (51)
    on left: 31 32, on right: 11
expr (52)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55, on right: 12 16 17 18 19 20 21 22 23 24 25 26 27
    28 32 36 37 38 39 40 41 42 43 44 48 49 50 51 52 53 54 55
T (53)
    on left: 56 57 58 59, on right: 12 13


State 0

    0 $accept: . program $end

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRING    shift, and go to state 3
    T_BOOL      shift, and go to state 4
    S_IF        shift, and go to state 5
    S_WHILE     shift, and go to state 6
    S_RETURN    shift, and go to state 7
    S_FOR       shift, and go to state 8
    LBRACE      shift, and go to state 9
    SEMICOLON   shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    program      go to state 12
    statements   go to state 13
    statement    go to state 14
    declaration  go to state 15
    assign       go to state 16
    if           go to state 17
    while        go to state 18
    for          go to state 19
    return       go to state 20
    T            go to state 21


State 1

   57 T: T_CHAR .

    $default  reduce using rule 57 (T)


State 2

   56 T: T_INT .

    $default  reduce using rule 56 (T)


State 3

   59 T: T_STRING .

    $default  reduce using rule 59 (T)


State 4

   58 T: T_BOOL .

    $default  reduce using rule 58 (T)


State 5

   17 if: S_IF . LPAREN expr RPAREN statements

    LPAREN  shift, and go to state 22


State 6

   18 while: S_WHILE . LPAREN expr RPAREN statements

    LPAREN  shift, and go to state 23


State 7

   31 return: S_RETURN .
   32       | S_RETURN . expr

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    $default  reduce using rule 31 (return)

    expr  go to state 34


State 8

   19 for: S_FOR . LPAREN expr SEMICOLON expr SEMICOLON expr RPAREN statements
   20    | S_FOR . LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN statements
   21    | S_FOR . LPAREN SEMICOLON expr SEMICOLON expr RPAREN statements
   22    | S_FOR . LPAREN expr SEMICOLON SEMICOLON expr RPAREN statements
   23    | S_FOR . LPAREN declaration SEMICOLON SEMICOLON expr RPAREN statements
   24    | S_FOR . LPAREN expr SEMICOLON expr SEMICOLON RPAREN statements
   25    | S_FOR . LPAREN declaration SEMICOLON expr SEMICOLON RPAREN statements
   26    | S_FOR . LPAREN SEMICOLON SEMICOLON expr RPAREN statements
   27    | S_FOR . LPAREN SEMICOLON expr SEMICOLON RPAREN statements
   28    | S_FOR . LPAREN expr SEMICOLON SEMICOLON RPAREN statements
   29    | S_FOR . LPAREN declaration SEMICOLON SEMICOLON RPAREN statements
   30    | S_FOR . LPAREN SEMICOLON SEMICOLON RPAREN statements

    LPAREN  shift, and go to state 35


State 9

    4 statements: LBRACE . statements RBRACE

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRING    shift, and go to state 3
    T_BOOL      shift, and go to state 4
    S_IF        shift, and go to state 5
    S_WHILE     shift, and go to state 6
    S_RETURN    shift, and go to state 7
    S_FOR       shift, and go to state 8
    LBRACE      shift, and go to state 9
    SEMICOLON   shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statements   go to state 36
    statement    go to state 14
    declaration  go to state 15
    assign       go to state 16
    if           go to state 17
    while        go to state 18
    for          go to state 19
    return       go to state 20
    T            go to state 21


State 10

    5 statement: SEMICOLON .

    $default  reduce using rule 5 (statement)


State 11

   16 assign: IDENTIFIER . LOP_ASSIGN expr

    LOP_ASSIGN  shift, and go to state 37


State 12

    0 $accept: program . $end

    $end  shift, and go to state 38


State 13

    1 program: statements .
    3 statements: statements . statement

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRING    shift, and go to state 3
    T_BOOL      shift, and go to state 4
    S_IF        shift, and go to state 5
    S_WHILE     shift, and go to state 6
    S_RETURN    shift, and go to state 7
    S_FOR       shift, and go to state 8
    SEMICOLON   shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 1 (program)

    statement    go to state 39
    declaration  go to state 15
    assign       go to state 16
    if           go to state 17
    while        go to state 18
    for          go to state 19
    return       go to state 20
    T            go to state 21


State 14

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 15

    6 statement: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 40


State 16

    7 statement: assign . SEMICOLON

    SEMICOLON  shift, and go to state 41


State 17

    8 statement: if .

    $default  reduce using rule 8 (statement)


State 18

    9 statement: while .

    $default  reduce using rule 9 (statement)


State 19

   10 statement: for .

    $default  reduce using rule 10 (statement)


State 20

   11 statement: return . SEMICOLON

    SEMICOLON  shift, and go to state 42


State 21

   12 declaration: T . IDENTIFIER LOP_ASSIGN expr
   13            | T . idlist

    IDENTIFIER  shift, and go to state 43

    idlist  go to state 44


State 22

   17 if: S_IF LPAREN . expr RPAREN statements

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    expr  go to state 45


State 23

   18 while: S_WHILE LPAREN . expr RPAREN statements

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    expr  go to state 46


State 24

   52 expr: LPAREN . expr RPAREN

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    expr  go to state 47


State 25

   55 expr: ADD . expr

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    expr  go to state 48


State 26

   54 expr: SUB . expr

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    expr  go to state 49


State 27

   42 expr: NOT . expr

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    expr  go to state 50


State 28

   34 expr: TRUE .

    $default  reduce using rule 34 (expr)


State 29

   35 expr: FALSE .

    $default  reduce using rule 35 (expr)


State 30

   33 expr: IDENTIFIER .

    $default  reduce using rule 33 (expr)


State 31

   45 expr: INTEGER .

    $default  reduce using rule 45 (expr)


State 32

   46 expr: CHAR .

    $default  reduce using rule 46 (expr)


State 33

   47 expr: STRING .

    $default  reduce using rule 47 (expr)


State 34

   32 return: S_RETURN expr .
   36 expr: expr . EQUAL expr
   37     | expr . NEQ expr
   38     | expr . GT expr
   39     | expr . LT expr
   40     | expr . GEQ expr
   41     | expr . LEQ expr
   43     | expr . AND expr
   44     | expr . OR expr
   48     | expr . ADD expr
   49     | expr . SUB expr
   50     | expr . MUL expr
   51     | expr . DIV expr
   53     | expr . MOD expr

    OR     shift, and go to state 51
    AND    shift, and go to state 52
    EQUAL  shift, and go to state 53
    NEQ    shift, and go to state 54
    GT     shift, and go to state 55
    LT     shift, and go to state 56
    GEQ    shift, and go to state 57
    LEQ    shift, and go to state 58
    ADD    shift, and go to state 59
    SUB    shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62
    MOD    shift, and go to state 63

    $default  reduce using rule 32 (return)


State 35

   19 for: S_FOR LPAREN . expr SEMICOLON expr SEMICOLON expr RPAREN statements
   20    | S_FOR LPAREN . declaration SEMICOLON expr SEMICOLON expr RPAREN statements
   21    | S_FOR LPAREN . SEMICOLON expr SEMICOLON expr RPAREN statements
   22    | S_FOR LPAREN . expr SEMICOLON SEMICOLON expr RPAREN statements
   23    | S_FOR LPAREN . declaration SEMICOLON SEMICOLON expr RPAREN statements
   24    | S_FOR LPAREN . expr SEMICOLON expr SEMICOLON RPAREN statements
   25    | S_FOR LPAREN . declaration SEMICOLON expr SEMICOLON RPAREN statements
   26    | S_FOR LPAREN . SEMICOLON SEMICOLON expr RPAREN statements
   27    | S_FOR LPAREN . SEMICOLON expr SEMICOLON RPAREN statements
   28    | S_FOR LPAREN . expr SEMICOLON SEMICOLON RPAREN statements
   29    | S_FOR LPAREN . declaration SEMICOLON SEMICOLON RPAREN statements
   30    | S_FOR LPAREN . SEMICOLON SEMICOLON RPAREN statements

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRING    shift, and go to state 3
    T_BOOL      shift, and go to state 4
    LPAREN      shift, and go to state 24
    SEMICOLON   shift, and go to state 64
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    declaration  go to state 65
    expr         go to state 66
    T            go to state 21


State 36

    3 statements: statements . statement
    4           | LBRACE statements . RBRACE

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_STRING    shift, and go to state 3
    T_BOOL      shift, and go to state 4
    S_IF        shift, and go to state 5
    S_WHILE     shift, and go to state 6
    S_RETURN    shift, and go to state 7
    S_FOR       shift, and go to state 8
    RBRACE      shift, and go to state 67
    SEMICOLON   shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement    go to state 39
    declaration  go to state 15
    assign       go to state 16
    if           go to state 17
    while        go to state 18
    for          go to state 19
    return       go to state 20
    T            go to state 21


State 37

   16 assign: IDENTIFIER LOP_ASSIGN . expr

    LPAREN      shift, and go to state 24
    ADD         shift, and go to state 25
    SUB         shift, and go to state 26
    NOT         shift, and go to state 27
    TRUE        shift, and go to state 28
    FALSE       shift, and go to state 29
    IDENTIFIER  shift, and go to state 30
    INTEGER     shift, and go to state 31
    CHAR        shift, and go to state 32
    STRING      shift, and go to state 33

    expr  go to state 68


State 38

    0 $accept: program $end .

    $default  accept


State 39

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 40

    6 statement: declaration SEMICOLON .

    $default  reduce using rule 6 (statement)


State 41

    7 statement: assign SEMICOLON .

    $default  reduce using rule 7 (statement)


State 42

   11 statement: return SEMICOLON .

    $default  reduce using rule 11 (statement)


State 43

   12 declaration: T IDENTIFIER . LOP_ASSIGN expr
   14 idlist: IDENTIFIER . COMMA idlist
   15       | IDENTIFIER .

    LOP_ASSIGN  shift, and go to state 69
    COMMA       shift, and go to state 70

    $default  reduce using rule 15 (idlist)


State 44

   13 declaration: T idlist .

    $default  reduce using rule 13 (declaration)


State 45

   17 if: S_IF LPAREN expr . RPAREN statements
   36 expr: expr . EQUAL expr
   37     | expr . NEQ expr
   38     | expr . GT expr
   39     | expr . LT expr
   40     | expr . GEQ expr
   41     | expr . LEQ expr
   43     | expr . AND expr
   44     | expr . OR expr
   48     | expr . ADD expr
   49     | expr . SUB expr
   50     | expr . MUL expr
   51     | expr . DIV expr
   53     | expr . MOD expr

    RPAREN  shift, and go to state 71
    OR      shift, and go to state 51
    AND     shift, and go to state 52
    EQUAL   shift, and go to state 53
    NEQ     shift, and go to state 54
    GT      shift, and go to state 55
    LT      shift, and go to state 56
    GEQ     shift, and go to state 57
    LEQ     shift, and go to state 58
    ADD     shift, and go to state 59
    SUB     shift, and go to state 60
    MUL     shift, and go to state 61
    DIV     shift, and go to state 62
    MOD     shift, and go to state 63


State 46

   18 while: S_WHILE LPAREN expr . RPAREN statements
   36 expr: expr . EQUAL expr
   37     | expr . NEQ expr
   38     | expr . GT expr
   39     | expr . LT expr
   40     | expr . GEQ expr
   41     | expr . LEQ expr
   43     | expr . AND expr
   44     | expr . OR expr
   48     | expr . ADD expr
   49     | expr . SUB expr
   50     | expr . MUL expr
   51     | expr . DIV expr
   53     | expr . MOD expr

    RPAREN  shift, and go to state 72
    OR      shift, and go to state 51
    AND     shift, and go to state 52
    EQUAL   shift, and go to state 53
    NEQ     shift, and go to state 54
    GT      shift, and go to state 55
    LT      shift, and go to state 56
    GEQ     shift, and go to state 57
    LEQ     shift, and go to state 58
    ADD     shift, and go to state 59
    SUB     shift, and go to state 60
    MUL     shift, and go to state 61
    DIV     shift, and go to state 62
    MOD     shift, and go to state 63


State 47

   36 expr: expr . EQUAL expr
   37     | expr . NEQ expr
   38     | expr . GT expr
   39     | expr . LT expr
   40     | expr . GEQ expr
   41     | expr . LEQ expr
   43     | expr . AND expr
   44     | expr . OR expr
   48     | expr . ADD expr
   49     | expr . SUB expr
   50     | expr . MUL expr
   51     | expr . DIV expr
   52     | LPAREN expr . RPAREN
   53     | expr . MOD expr
